# zephyr-drivers

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Kconfig  README.md
.github/: dependabot.yml  west.yml
.github/workflows/: build.yml
docs/: actuator.md
drivers/: CMakeLists.txt  Kconfig
drivers/actuator/: CMakeLists.txt  Kconfig  actuator_internal.h
drivers/actuator/bus_servo/: CMakeLists.txt  Kconfig  actuator_bus_servo.c
drivers/actuator/dxl/: CMakeLists.txt  Kconfig  actuator_dxl.c
drivers/actuator/fake/: CMakeLists.txt  Kconfig  actuator_fake.c
drivers/actuator/hbridge/: CMakeLists.txt  Kconfig  actuator_hbridge.c
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.adafruit_seesaw  adc_adafruit_seesaw.c
drivers/bus_servo/: CMakeLists.txt  Kconfig  bus_servo.c  bus_servo_internal.h  bus_servo_serial.c
drivers/dynamixel/: CMakeLists.txt  Kconfig  dynamixel.c  dynamixel_group.c  dynamixel_internal.h  dynamixel_protocol.c  dynamixel_serial.c  dynamixel_tables.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.adafruit_seesaw  gpio_adafruit_seesaw.c
drivers/led_strip/: CMakeLists.txt  Kconfig  Kconfig.adafruit_seesaw  led_strip_adafruit_seesaw.c
drivers/mfd/seesaw/: CMakeLists.txt  Kconfig  mfd_seesaw.c  mfd_seesaw_regs.h  mfd_seesaw_trigger.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.adafruit_seesaw  pwm_adafruit_seesaw.c
drivers/seesaw/: CMakeLists.txt  Kconfig  seesaw.c  seesaw.h  seesaw_trigger.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/adafruit_seesaw_encoder/: CMakeLists.txt  Kconfig  adafruit_seesaw_encoder.c
drivers/sensor/as7341/: CMakeLists.txt  Kconfig  as7341.c  as7341.h
drivers/sensor/esp32_pcnt_encoder/: CMakeLists.txt  Kconfig  esp32_pcnt_encoder.c
drivers/sensor/singletact/: CMakeLists.txt  Kconfig  singletact.c  singletact.h
drivers/video/: CMakeLists.txt  Kconfig  video_esp32_csi.c
dts/bindings/: adafruit,seesaw.yaml  robotis,dynamixel.yaml  vendor-prefixes.txt  waveshare,bus-servo.yaml
include/drivers/: bus_servo.h  dynamixel.h  seesaw.h
lib/: CMakeLists.txt  Kconfig
lib/actuator/: CMakeLists.txt  Kconfig  capabilities.c  state_machine.c  unit_helpers.c
lib/cdr/: CMakeLists.txt  Kconfig  cdr.c
subsys/: CMakeLists.txt  Kconfig
tests/drivers/actuator/bus_servo/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/actuator/bus_servo/boards/: native_sim.overlay
tests/drivers/actuator/bus_servo/src/: test_set_position.c
tests/drivers/actuator/dxl/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/actuator/dxl/src/: main.c  test_group.c  test_set_position.c
tests/drivers/bus_servo/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/bus_servo/boards/: native_sim.overlay
tests/drivers/bus_servo/src/: fake_bus.c  fake_bus.h  main.c  test_protocol.c
tests/drivers/dynamixel/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/dynamixel/boards/: arduino_mkrzero.overlay  native_sim.overlay
tests/drivers/dynamixel/src/: fake_bus.c  fake_bus.h  fake_servo.c  fake_servo.h  main.c  test_bulk.c  test_dynamixel.c  test_dynamixel.h  test_motors.c  test_protocol.c  test_sync.c  test_tables.c
tests/drivers/sensor/as7341/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/sensor/as7341/boards/: native_sim.overlay
tests/drivers/sensor/as7341/src/: as7341_emul.c  as7341_emul.h  as7341_test.c  main.c
zephyr/: module.yml
(+175 files in other folders)
